namespace UltimateSurvival.AI
{
    /// <summary>
    /// Class used holding string values used in code.
    /// </summary>
    public class HelpStrings
    {
		public class AI
		{
			// Dictionary
			public const string IS_PLAYER_DEAD = "Is Player Dead";
			public const string IS_PLAYER_IN_SIGHT = "Player in sight";
			public const string CAN_ATTACK_PLAYER = "Can Attack Player";
			public const string NEXT_TO_FOOD = "Next To Food";
			public const string IS_HUNGRY = "Is Hungry";

			// Animator parameters.
			public const string ANIMATOR_PARAM_WALK = "Walk";
			public const string ANIMATOR_PARAM_RUN = "Run";
			public const string ANIMATOR_PARAM_EAT = "Eat";
			public const string ANIMATOR_PARAM_ATTACK = "Attack";
		}
    }
}